--- a/thesis/introduction.ltx
+++ b/thesis/introduction.ltx
@@ -13,7 +13,7 @@ Types of ontologies range from lightweight ontologies like glossaries and taxono
 \caption{Classification of orphan class in Wikidata's taxonomy}
 \label{fig:problem example}
 \end{figure}
-In this work, the taxonomy of Wikidata is considered as case example, as it provides a high number of entities (\textbf{check number of entities} in \dumpdate{}).
+In this work, the taxonomy of Wikidata is considered as case example, as it provides a high number of entities ($24507102$ in \dumpdate{}).
 and a high degree of ''correctness'', since human editors constantly curate the existing knowledge.
 In a complete taxonomy, a single root class exists, which is considered the most general concept \cite{Cimiano2006}. All other classes should therefore have a superclass.
 Wikidata's taxonomy is incomplete in regards to this criteria. Superclass-less non-root classes are called orphan classes.
