Added "Variation: Vector offset". Edited "Variation: Graph walk".

--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -35,7 +35,7 @@
 \newcommand{\rootc}{\ensuremath{root_C}}
 % subclass of relation
 \newcommand{\subclassof}[1]{
-\ensuremath{\vartriangleleft_#1}
+\ensuremath{\vartriangleleft_{#1}}
 }
 
 % absolute value
