Updated Section "Variation: Vector offset" to include new plot.

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -6,7 +6,7 @@ will be implemented by a baseline algorithm and for each variation an improvemen
 which in general replaces one of the components.
 The data flow and input/output between the components is visualized in Figure~\ref{fig:algorithm data flow}
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[width=\textwidth]{images/algorithm/combined_algorithm_components.pdf}
 \caption{Data flow between components}
@@ -120,10 +120,10 @@ the subclass-of offsets for $800000$ randomly chosen subclass-superclass pairs w
 Using Principal Component Analysis (PCA), the 300-dimensional vectors were reduced to  2-dimensional vectors,
 which are shown in Figure~\ref{fig:2d offsets}.
 
-\begin{figure}
+\begin{figure}[h]
 \centering
-\includegraphics[width=0.75\textwidth]{images/algorithm/2d_subclass_offsets.png}
-\caption{Subclass-of offsets of $400000$ randomly chosen subclass-superclass pairs}
+\includegraphics[width=\textwidth]{images/algorithm/2d_subclass_offsets.png}
+\caption{Subclass-of offsets of $800000$ randomly chosen subclass-superclass pairs}
 \label{fig:2d offsets}
 \end{figure}
 
