--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -40,6 +40,8 @@
 
 % absolute value
 \newcommand{\abs}[1]{\lvert #1 \rvert}
+% norm
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert}
 % projection
 \newcommand{\proj}[2]{\pi_#1(#2)}
 
