Revision 1.0 for Chapter "Introduction".

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -635,4 +635,12 @@ title = {Software Implementation for Taxonomy Browsing and Ontology Evaluation f
 type = {Master thesis},
 year = {2016}
 }
-
+% wikidata dump of 2016-11-07
+@misc{WikidataDump,
+title={Wikidata entity dump},
+year={2016},
+month={11},
+day={7},
+howpublished={https://dumps.wikimedia.org/wikidatawiki/entities/},
+note={Accessed: 2016-11-20}
+}
