Reformatting of thesis. New page for each chapter. Fill up end of pages. Figures should not be placed before the chapter title.

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -5,7 +5,7 @@ This leads to the identification of three main components. These main components
 will be implemented by a baseline algorithm and for each baseline component improvements are proposed.
 The data flow and input/output between the components is visualized in Figure~\ref{fig:algorithm data flow}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{images/algorithm/combined_algorithm_components.pdf}
 \caption{Data flow between components}
