--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -19,9 +19,10 @@ Statements are in their simplest form a pair of property and value, assigned to 
 It should be noted that an item can have multiple statements with the same property. The set of statements with the same property is called statement group.
 Statements can be annotated with qualifiers, which specify the context of the statement, e.g. population at a certain point of time.
 Additionally, references can be used for statements to include its source. See Figure~\ref{fig:class example} for an example of a Wikidata item.
+
 \begin{figure}
 \centering
-\includegraphics[width=\textwidth]{images/foundations/item_example.png}
+\includegraphics[width=0.9\textwidth]{images/foundations/item_example.png}
 \caption{Example of Wikidata class: photographic film (Q6239)}
 \label{fig:class example}
 \end{figure}
@@ -83,6 +84,7 @@ since every knowledge base has to be conceptualized by an ontology \cite{Wong201
 They typically represent a parent-child structure, which can be formalized with a single relationship called for example \textit{subclass-of} in the case of Wikidata.
 The observed taxonomy in Wikidata belongs to the category of lightweight ontologies, specifically \textit{principled, informal hierarchies}, 
 as the only enforced rule for the subclass-of relation is that it should connect two entities \cite{WikidataP279}.
+
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{images/foundations/wong2012_spectrum_of_ontology_kinds.png}
