--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -19,6 +19,7 @@
 \usepackage[normalem]{ulem}
 \usepackage{hyperref}
 \usepackage[yyyymmdd]{datetime} % for writing dates
+\usepackage{float} % force float to position with H
 
 % fullcite/1: cite both author and numeric code of reference
 \newcommand{\fullcite}[1]{\citeauthor{#1} \cite{#1}}
