--- a/thesis/taxonomy_analysis.ltx
+++ b/thesis/taxonomy_analysis.ltx
@@ -14,7 +14,7 @@ $97\%$ of all classes are  therefore nodes in the root taxonomy.
 This implies a high agreement in the Wikidata community on which class is considered root,
 and thereby also supports the modeling decision made in Section~\ref{section:taxonomy},
 which assumes that a taxonomy only has one root, and this root is \entity{} in Wikidata.
-\begin{figure}
+\begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{images/taxonomy_analysis/distance_to_root.png}
 \caption{Distance of subclasses to root class \entity{}. Wikidata (\dumpdate{})}
