--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -15,6 +15,7 @@
 \secondreviewer{Dr. Mahdi Bohlouli}
 \secondreviewerinfo{Institute for Web Science and Technologies}
 
+\flushbottom
 
 \begin{document}
 
@@ -36,32 +37,37 @@
 
 \section{Introduction}\label{section:introduction}
 \import{./}{introduction.ltx}
+\newpage
 
 \section{Background and related work}\label{section:foundations}
 \import{./}{foundations.ltx}
+\newpage
 
 \subsection{Neural networks}\label{section:neural networks}
 \import{./}{neural_networks.ltx}
+\newpage
 
 \subsection{Ontology learning}\label{section:ontology learning}
 \import{./}{ontology_learning.ltx}
+\newpage
 
 \section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
 \import{./}{taxonomy_analysis.ltx}
+\newpage
 
 \section{Hybrid algorithm}\label{section:algorithm}
 \import{./}{algorithm.ltx}
+\newpage
 
 \section{Evaluation}\label{section:evaluation}
-
 \subsection{Method}
 \citeauthor{Dellschaft2006} \cite{Dellschaft2006}
-
 \subsection{Generation of gold standard}
-
 \subsection{Results}
+\newpage
 
 \section{Conclusion and future work}\label{section:conclusion}
+\newpage
 
 \bibliographystyle{plainnat}
 \bibliography{bibliography}
